# vakfu

./: .rustfmt.toml  AGENTS.md  Cargo.toml  LICENSE  README.md  fix_render.sh
.github/workflows/: ci.yml  pr.yml  release.yml
doc/: engine.md
src/: assets.rs  camera.rs  main.rs  render.rs  settings.rs  util.rs
src/assets/: jar.rs  light.rs  map.rs  mod.rs  sprite.rs  tgam.rs
src/map/: animation.rs  chunk.rs  element.rs  frames.rs  mod.rs  sprite.rs
src/systems/: camera.rs  mod.rs  navigation.rs  render.rs  settings.rs  setup.rs  ui.rs
src/utils/: id.rs
src/wfu/: mod.rs
src/wfu/gfx/: camera.rs  color_table.rs  lod.rs  map.rs  map_patch.rs  mod.rs  render_element.rs  render_spec.rs  texture_coords.rs
src/wfu/gfx/world/: element_definition.rs  library.rs  light.rs  mod.rs  world_element.rs
src/wfu/io/: decoder.rs  mod.rs  tgam.rs
src/wfu/util/: indexed.rs  input_state.rs  mod.rs  resources.rs  timer.rs  uluru.rs
src/wfu/vk/: fragment_shader.rs  map_batch_renderer.rs  map_renderer.rs  mod.rs  persistent.rs  sprite.rs  texture_pool.rs  vertex.rs  vertex_shader.rs  vk_texture.rs
