[package]
name = "vakfu"
version = "0.3.1"
authors = ["Jacek Malec <jac3km4@gmail.com>"]

[dependencies]
vulkano = "0.11.1"
vulkano-win = "0.11.1"
vulkano-shaders = "0.11.1"
winit = "0.18.1"
zip = "0.5.2"
byteorder = "1.3.1"
cgmath = "0.17.0"
itertools = "0.8.0"
getopts = "0.2.19"
log = "0.4.6"
simplelog = "0.5.3"
chrono = "0.4.6"
