[package]
name = "vakfu"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
pico-args = "0.4"
byte = "0.2"
modular-bitfield = "0.11"
glam = "0.20"
itertools = "0.10"

[dependencies.zip]
version = "0.6"
default-features = false
features = [ "deflate" ]

[dependencies.bevy]
version = "0.7"
default-features = false
features = [ "bevy_winit", "render", "x11" ]

[dependencies.bevy_egui]
version = "0.13"
default-features = false
features = []

[patch.crates-io.bevy]
git = "https://github.com/jac3km4/bevy.git"
branch = "custom-blending"
