[package]
name = "vakfu"
version = "0.5.0"
edition = "2024"

[dependencies]
anyhow = "1"
thiserror = "2"
pico-args = "0.5"
bitfield-struct = "0.10"
hashbrown = "0.15"
rstar = "0.12"

[dependencies.bevy]
version = "0.16"
default-features = false
features = [
    "async_executor",
    "bevy_log",
    "bevy_winit",
    "bevy_image",
    "bevy_sprite",
    "multi_threaded",
    "std",
    "wayland",
    "webgl2",
    "x11",
    "zstd",
]

[dependencies.bevy_egui]
version = "0.34"
default-features = false
features = ["default_fonts", "render"]

[dependencies.zip]
version = "2"
default-features = false
features = ["deflate"]

[dependencies.byte]
git = "https://github.com/jac3km4/byte"
rev = "da71833"
features = ["alloc", "derive"]

[lints.rust]
warnings = "warn"
future-incompatible = "warn"
let-underscore = "warn"
nonstandard-style = "warn"
rust-2018-compatibility = "warn"
rust-2018-idioms = "warn"
rust-2021-compatibility = "warn"

[lints.clippy]
all = "warn"
match_same_arms = "warn"
semicolon_if_nothing_returned = "warn"
single_match_else = "warn"
redundant_closure_for_method_calls = "warn"
cloned_instead_of_copied = "warn"
redundant_else = "warn"
unnested_or_patterns = "warn"
unreadable_literal = "warn"
type_repetition_in_bounds = "warn"
equatable_if_let = "warn"
implicit_clone = "warn"
default_trait_access = "warn"
explicit_deref_methods = "warn"
explicit_iter_loop = "warn"
inefficient_to_string = "warn"
match_bool = "warn"

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"

# using a custom branch in order to use premultiplied alpha
[patch.crates-io.bevy]
git = "https://github.com/jac3km4/bevy.git"
branch = "premultiplied-alpha"

[patch.crates-io.bevy_app]
git = "https://github.com/jac3km4/bevy.git"
branch = "premultiplied-alpha"

[patch.crates-io.bevy_asset]
git = "https://github.com/jac3km4/bevy.git"
branch = "premultiplied-alpha"

[patch.crates-io.bevy_derive]
git = "https://github.com/jac3km4/bevy.git"
branch = "premultiplied-alpha"

[patch.crates-io.bevy_ecs]
git = "https://github.com/jac3km4/bevy.git"
branch = "premultiplied-alpha"

[patch.crates-io.bevy_image]
git = "https://github.com/jac3km4/bevy.git"
branch = "premultiplied-alpha"

[patch.crates-io.bevy_input]
git = "https://github.com/jac3km4/bevy.git"
branch = "premultiplied-alpha"

[patch.crates-io.bevy_log]
git = "https://github.com/jac3km4/bevy.git"
branch = "premultiplied-alpha"

[patch.crates-io.bevy_math]
git = "https://github.com/jac3km4/bevy.git"
branch = "premultiplied-alpha"

[patch.crates-io.bevy_platform]
git = "https://github.com/jac3km4/bevy.git"
branch = "premultiplied-alpha"

[patch.crates-io.bevy_reflect]
git = "https://github.com/jac3km4/bevy.git"
branch = "premultiplied-alpha"

[patch.crates-io.bevy_render]
git = "https://github.com/jac3km4/bevy.git"
branch = "premultiplied-alpha"

[patch.crates-io.bevy_time]
git = "https://github.com/jac3km4/bevy.git"
branch = "premultiplied-alpha"

[patch.crates-io.bevy_window]
git = "https://github.com/jac3km4/bevy.git"
branch = "premultiplied-alpha"

[patch.crates-io.bevy_winit]
git = "https://github.com/jac3km4/bevy.git"
branch = "premultiplied-alpha"
